syntax = "proto3";

package redpanda.api.console.v1alpha1;

// RedpandaNewsService provides Redpanda-specific news and updates functionality to the console
service RedpandaNewsService {
  // GetRedpandaNews retrieves the latest news and updates from Redpanda
  rpc GetRedpandaNews(GetRedpandaNewsRequest) returns (GetRedpandaNewsResponse) {}
}

// RedpandaNewsItem represents a single news item from Redpanda
message RedpandaNewsItem {
  string title = 1; // The title of the news item
  string link = 2; // The URL link to the full news article
  string description = 3; // A brief description or summary of the news item
  string pub_date = 4; // The publication date of the news item
}

// GetRedpandaNewsRequest is the request message for getting Redpanda news
message GetRedpandaNewsRequest {
  // No fields required for now, but can be extended in the future
}

// GetRedpandaNewsResponse is the response message containing Redpanda news
message GetRedpandaNewsResponse {
  string title = 1; // The title of the news feed
  string last_updated = 2; // Timestamp of when the news was last updated
  repeated RedpandaNewsItem news_items = 3; // List of news items
}
